cmake_minimum_required(VERSION 3.10)

project(test)
file(GLOB_RECURSE TEST_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp )
file(GLOB_RECURSE TEST_HEADERS ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hxx )
SET(ALL_TEST_FILES ${TEST_SOURCES} ${TEST_HEADERS})

add_executable(${PROJECT_NAME} ${ALL_TEST_FILES})
if(WIN32)
	target_link_libraries(${PROJECT_NAME} network)
elseif(UNIX)
	target_link_libraries(${PROJECT_NAME} network dl)
endif()
if(UNIX)
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
		SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -Wall -O0 -g")
	elseif (CMAKE_BUILD_TYPE MATCHES "Release")
	    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -Wall -O2")
	else()
	endif()
endif()
if (MSVC)
	#$(Configuration) 用于区别是Debug还是Release
	set_target_properties(test PROPERTIES VS_DEBUGGER_ENVIRONMENT "PATH=%PATH%;${PROJECT_BINARY_DIR}/../network/$(Configuration);")
endif()